--- a/src/index.scss
+++ b/src/index.scss
@@ -15,14 +15,14 @@ a {
     cursor: pointer;
   }
 }
-h1,
-h2,
-h3,
-h4,
-h5,
-h6 {
-  font-weight: normal;
-}
+// h1,
+// h2,
+// h3,
+// h4,
+// h5,
+// h6 {
+//   font-weight: normal;
+// }
 body {
   font-size: 16px;
   line-height: 1.5;
